--- a/docroot/profiles/sdss/sdss_profile/themes/sdss_subtheme/src/scss/components/header/_header.scss
+++ b/docroot/profiles/sdss/sdss_profile/themes/sdss_subtheme/src/scss/components/header/_header.scss
@@ -13,7 +13,7 @@ header.su-masthead {
     max-width: unset;
 
     @include grid-media-min('lg') {
-      // padding-left: 100px; // needs removing for green header
+      padding-left: 100px; // needs removing for green header
     }
 
     .system-menu-block {
